# bossdoc

./: .cspell.json  .editorconfig  .gitignore  .gitlab-ci.yml  .gitpod.yml  .linkcheckerrc  .markdownlint.json  .pre-commit-config.yaml  .readthedocs.yml  .taplo.toml  CONTRIBUTING.md  LICENSE  README.md  _quarto.yml  bibliography.bib  contribute.qmd  cspell.json  environment.yml  glossary.yml  index.qmd  labels.toml  pyproject.toml  pyrightconfig.json  references.qmd  setup.cfg  tox.ini
.constraints/: py3.10.txt  py3.11.txt  py3.12.txt  py3.7.txt  py3.8.txt  py3.9.txt
.github/: pull_request_template.md  release-drafter.yml
.github/workflows/: cd.yml  ci-docs.yml  ci-style.yml  ci.yml  linkcheck.yml  pr-linting.yml  requirements-cron.yml  requirements.yml
appendices/: _metadata.yml  c_cpp_properties.json  gitlab.qmd  tips.qmd  troubleshooting.qmd
docs/: .gitignore  _quarto.yml  appendices.md  bes3.md  bes3.qmd  bes3.rst  conf.py  contribute.md  contributing.md  index.md  packages.md  packages.rst  physics.md  physics.rst  tutorials.md  tutorials.rst
docs/_static/: .gitignore
docs/appendices/: c_cpp_properties.json  gitlab.md  glossary.md  glossary.rst  index.qmd  references.md  references.qmd  tips.md  tips.qmd  troubleshooting.md  z.references.md
docs/appendices/tips/: gitlab.md  gitlab.rst  tips-and-tricks.md  tips-and-tricks.rst  troubleshooting.md
docs/physics/: _metadata.yml  besiii.md  cuts.md  fitting.md  publication-procedure.md  publication-procedure.qmd  statistics.md  statistics.rst  visualization.md  visualization.rst
docs/tutorials/: data.md  data.rst  final.md  getting-started.md  initial.md
docs/tutorials/data/: exclusive.md  exclusive.rst  inclusive.md  index.qmd  measurements.md  measurements.rst
docs/tutorials/final/: background.md  errors.md  signal.md  signal.rst
docs/tutorials/getting-started/: data-quota.md  data-quota.qmd  data-quota.rst  intro.md  intro.rst  jobs.md  jobs.rst  server.md  server.qmd  server.rst  setup-package.md  setup-package.rst  setup.md  setup.rst  summary.md  summary.rst
physics/: besiii.qmd  cuts.qmd  fitting.qmd  index.qmd  statistics.qmd  visualization.qmd
reqs/: extract_install_requires.py  requirements-dev.in  requirements-doc.in  requirements-sty.in
reqs/3.6/: requirements-dev.txt  requirements-doc.txt  requirements-sty.txt  requirements.txt
reqs/3.7/: requirements-dev.txt  requirements-doc.txt  requirements-sty.txt  requirements.txt
reqs/3.8/: requirements-dev.txt  requirements-doc.txt  requirements-sty.txt  requirements.txt
reqs/3.9/: requirements-dev.txt  requirements-doc.txt  requirements-sty.txt  requirements.txt
src/: .gitignore  _config.yml  appendices.rst  conf.py  contributing.rst  index.md  index.rst  packages.rst
src/appendices/: tips.rst  z.references.rst
src/appendices/tips/: gitlab.rst  tips-and-tricks.rst  troubleshooting.rst
src/physics/: besiii.rst  cuts.rst  fitting.rst  publication-procedure.rst
src/tutorials/: data.rst  final.rst  getting-started.rst  initial.rst
src/tutorials/data/: exclusive.rst  inclusive.rst
src/tutorials/final/: background.rst  errors.rst
src/tutorials/getting-started/: data-quota.rst  intro.rst  jobs.rst  server.rst  setup-package.rst  setup.rst  summary.rst
tutorials/: index.qmd  initial.qmd
tutorials/data/: exclusive.qmd  inclusive.qmd  index.qmd  measurements.qmd
tutorials/final/: background.qmd  errors.qmd  index.qmd  signal.qmd
tutorials/getting-started/: data-quota.qmd  index.qmd  intro.qmd  jobs.qmd  server.qmd  setup-package.qmd  setup.qmd  summary.qmd
