[project]
description = "Documentation of the BESIII Offline Software System"
keywords = [
    "BESIII",
    "HEP",
    "IHEP",
    "particle physics",
    "particles",
    "physics",
]
license = {file = "LICENSE"}
name = "bossdoc"
requires-python = "~=3.13.0"
version = "0.0.0"

[project.readme]
content-type = "text/markdown"
file = "README.md"

[project.urls]
Changelog = "https://github.com/redeboer/bossdoc/releases"
Documentation = "https://bes3.rtfd.io"
Source = "https://github.com/redeboer/bossdoc"
Tracker = "https://github.com/redeboer/bossdoc/issues"

[dependency-groups]
dev = [
    "poethepoet",
    {include-group = "doc"},
]
doc = ["quarto-cli"]

[tool.poe]
executor.type = "uv"

[tool.poe.tasks.all]
help = "Run all continuous integration (CI) tasks locally"
ignore_fail = "return_non_zero"
sequence = [
    "doc",
    "linkcheck",
    "style",
]

[tool.poe.tasks.doc]
cmd = "quarto render --no-clean"
help = "Build website"

[tool.poe.tasks.doclive]
cmd = "quarto preview --no-clean"
help = "Set up a server to directly preview changes to the HTML pages"

[tool.poe.tasks.linkcheck]
cmd = """
python -c 'print("Not yet implemented, see https://github.com/quarto-dev/quarto-cli/issues/1319")',
"""
help = "Check external links in the documentation (requires internet connection)"

[tool.poe.tasks.style]
cmd = "uv run --group style --isolated --no-dev pre-commit run --all-files"
help = "Perform all linting, formatting, and spelling checks"

[tool.tomlsort]
all = false
ignore_case = true
in_place = true
sort_first = ["project"]
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
