[project]
name = "bossdoc"
version = "0.0.0"
description = "Documentation of the BESIII Offline Software System"
requires-python = "~=3.13.0"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
    "BESIII",
    "HEP",
    "IHEP",
    "particle physics",
    "particles",
    "physics",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Changelog = "https://github.com/redeboer/bossdoc/releases"
Documentation = "https://bes3.rtfd.io"
Issues = "https://github.com/redeboer/bossdoc/issues"
Source = "https://github.com/redeboer/bossdoc"

[dependency-groups]
dev = [
    { include-group = "doc" },
    { include-group = "linkcheck" },
]
doc = ["quarto-cli"]
linkcheck = ["linkchecker"]

[tool.compwa.policy.github]
no-cd = true

[tool.compwa.policy.repo]
keep-issue-templates = true

[tool.poe.executor]
isolated = true
no-group = "dev"
type = "uv"

[tool.poe.groups.doc]
heading = "Documentation"

[tool.poe.groups.doc.tasks.doc]
cmd = "quarto render --no-clean"
executor = { group = "doc" }
help = "Build website"

[tool.poe.groups.doc.tasks.doclive]
cmd = "quarto preview --no-clean"
executor = { group = "doc" }
help = "Set up a server to directly preview changes to the HTML pages"

[tool.poe.groups.doc.tasks.linkcheck]
cmd = "linkchecker --config .linkcheckerrc _build/html/index.html"
executor = { group = "linkcheck" }
help = "Check external links in the rendered documentation (requires a prior `poe doc` build and an internet connection)"

[tool.poe.tasks.all]
help = "Run all continuous integration (CI) tasks locally"
ignore_fail = "return_non_zero"
sequence = [
    "doc",
    "linkcheck",
    "style",
]

[tool.poe.tasks.style]
cmd = "pre-commit run --all-files"
help = "Perform all linting, formatting, and spelling checks"

[tool.poe.tasks.upgrade]
executor = { type = "simple" }
help = "Upgrade lock files"
parallel = ["_upgrade-precommit", "_upgrade-uv"]

[tool.poe.tasks._upgrade-precommit]
cmd = "pre-commit autoupdate -j8"
executor = { type = "simple" }

[tool.poe.tasks._upgrade-uv]
cmd = "uv lock --upgrade"
executor = { type = "simple" }

[tool.tombi.files]
exclude = ["**/uv.lock"]

[tool.tombi.format.rules]
indent-width = 4
line-width = 88

[tool.tombi.lint.rules]
key-empty = "off"

[[tool.tombi.schemas]]
root = "tool.compwa.policy"
path = "https://raw.githubusercontent.com/ComPWA/policy/0.9.0/compwa-policy.schema.json"
include = ["pyproject.toml"]
