[metadata]
name = BOSS Documentation
description = Documentation of the BESIII Offline Software System
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Tracker = https://github.com/redeboer/bossdoc/issues
    Changelog = https://github.com/redeboer/bossdoc/releases
    Documentation = http://bes3.rtfd.io
    Source = https://github.com/redeboer/bossdoc
license = GPLv3 or later
keywords =
    BESIII
    HEP
    IHEP
    particle physics
    particles
    physics
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    ipywidgets
    jupyter
    matplotlib
    myst-nb >=0.11  # myst_enable_extensions
    Sphinx >=3
    sphinx-book-theme
    sphinx-copybutton
    sphinx-math-dollar
    sphinx-panels
    sphinx-thebe
    sphinx-togglebutton
    sphinxcontrib-bibtex >=2
    sphobjinv

[options.extras_require]
format =
    black
    isort
sty =
    pre-commit >=1.4.0
    %(format)s
dev =
    %(sty)s
    aquirdturtle-collapsible-headings
    jupyterlab
    jupyterlab-code-formatter
    labels
    sphinx-autobuild
    tox >=1.9  # for skip_install, use_develop
